# fbar

./: .gitignore  Dockerfile  LICENSE  Pipfile  README.md  cspell.config.yaml  fbar.py  pyproject.toml  taskfile.yaml  test_fbar.py
