[project]
name = "fbar"
version = "0.1.0"
description = "Foreign Bank and Financial Accounts Report (FBAR) Calculator - helps US residents determine if they need to file FBAR forms based on foreign account balances and official Treasury exchange rates"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
